@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST midori-0.1.1.tar.bz2 309109 RMD160 936e9f310ee1d3b9546eee8ed1806bf8d1827d53 SHA1 df1176aa584369f04e5e7e76bc4e193af0580ab0 SHA256 e0a521533e999b8541d3c8ed3cedfa6b353f66a66b2ae8c5e309485ae79bbbe7
-EBUILD midori-0.1.1.ebuild 2099 RMD160 0ae4e665e3041ed6bf5a55599ee2e88728a3487e SHA1 532b45f6a82f7e2f9543025b4bd2f6517d26486a SHA256 ad40899aa05fcd72565ed2cfcff11a2d1746aaa5fe544ab6d1126a15ce275b88
-EBUILD midori-9999.ebuild 1899 RMD160 1da12663fa8b91112e827e4fcfa62ee13e515286 SHA1 fac72230b3b6cb256022e2f7b420d6cfb7eac097 SHA256 acbe0d5ec326d2613038a30b1a67939778f4411ab65e545150ae17b3625762ca
-MISC ChangeLog 2187 RMD160 099a464038ea2593298a7924448265a6de1a042d SHA1 eef45168344902eec3dd2429a811751b7c783d31 SHA256 44ee0feacb580a1d1a531568ab30fe269f53023fbcd27221ece576a14c4b5991
+EBUILD midori-0.1.1.ebuild 2162 RMD160 78d15b5ddbb1af8dc7722f8439464d828c7478a3 SHA1 98a007b06986265ccdd7924f4871247d3c1f4aa1 SHA256 3a8d2fcb145349766d538092caaffc1f2f57ce95d4f4351ab6a6d03d37eb6a23
+EBUILD midori-9999.ebuild 1901 RMD160 149195962d811888241bfd0988210f2afdcd5c21 SHA1 99d6c155e065639320334ef9fb0004f932d4297e SHA256 c50cc7cecec15de0e9144f76140159b5000198bb66681c07c0aced0012360113
+MISC ChangeLog 2335 RMD160 6e9e80a65bc85020eeac33b1363e1dd128b83cfb SHA1 2785fa2a186f2def662b321e33efba71b42ab27f SHA256 f08599c9ad5425b8a2fd9641d4181215ad6ebd94018cd276b226d5d06eeb203f
 MISC metadata.xml 313 RMD160 4f246d861576fec820b0f47f72aaf2f65212c213 SHA1 b99c81d8904c399952cb052d3f199febdc686607 SHA256 3b38fde03519c5e4aee213c8a59510553b1cb6d9a24c69cc90ef0fb797a1012e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEUEARECAAYFAklDtqEACgkQKhnDs22gwa/2dACfUvJuSKZOUzffVptUjRXU8FTq
-W5EAmOseFnNwDUnaqj3vCY4rF8zE0V8=
-=+AZs
+iEYEARECAAYFAklDt88ACgkQKhnDs22gwa/yQACgoFQnr2vGi0+Do4zeEIDw1cQe
+nJQAnRxT+08XhYzfmKFn4gnAdcPEXsgS
+=P1YV
 -----END PGP SIGNATURE-----
